<resources>
    <string name="app_name">WordPuzzle</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet_connection_title">no internet connection</string>
    <string name="no_internet_connection_body">Please check your internet connection and try again</string>
    <string name="loading">Loading…</string>
    <string name="logout">Logout</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="change_password">Change password</string>
    <string name="generate_password">Generate password</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="have_password_login">Have Password? <u>LOGIN</u></string>
    <string name="forget_password"><u>FORGET PASSWORD?</u></string>
    <string name="forget_password_small">Forgot Password</string>
    <string name="enter_your_register_email_id">enter your register email id</string>
    <string name="new_user_register">New user? <u>REGISTER</u></string>
    <string name="do_you_want_to_generate_password">Do you want to generate password? </string>
    <string name="remember_password_login">Remember Password?\n<u>LOGIN</u></string>
    <string name="login">Login</string>
    <string name="paid_dialog_text">To go ad free select paid version or select continue</string>
    <string name="send">Send</string>
    <string name="free">Free</string>
    <string name="continued">Continue</string>
    <string name="loadGame">Load Game</string>
    <string name="newGame">New Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="next_level">Next Level</string>
    <string name="reset">Reset</string>
    <string name="replay">Replay</string>
    <string name="playername">Player365</string>
    <string name="paid">Paid</string>
    <string name="selectBookPdf">Select book pdf</string>
    <string name="noBookFound">No book found…!!</string>
    <string name="noWordFound">No word found…!!</string>
    <string name="noRecordFound">No record found.</string>
    <string name="search">Search</string>
    <string name="maxPageNo">Maximum page no. :</string>
    <string name="selectPageNo">Select page no. :</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="letsPlay">Let’s play…</string>
    <string name="profile">Profile</string>
    <string name="leaderBoard">Leader board</string>
    <string name="level_complete">Level Complete</string>
    <string name="pageBookSelection">Page/Book Selection</string>
    <string name="settings">Settings</string>
    <string name="gameMode">Game mode</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="playerName">Player Name</string>
    <string name="editName">Edit Name:</string>
    <string name="saveChanges">Save changes</string>
    <string name="audioSettings">Audio settings</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="score">Score</string>
    <string name="emailAddressIsRequire">Email address is require</string>
    <string name="passwordIsRequire">Password is require</string>
    <string name="newPasswordIsRequire">New Password is require</string>
    <string name="confirmPasswordIsRequire">Confirm Password is require</string>
    <string name="currentPasswordIsRequire">Current Password is require</string>
    <string name="incorrectEmailAddress">Incorrect email address</string>
    <string name="pleaseCheckConfirmPassword">Please Check Confirm Password</string>
    <string name="areYouSureYouWantToLeave">Are you sure, you want to leave?</string>
    <string name="nameIsRequire">Name is require</string>
    <string name="yourPasswordUpdateSoon">Your Password Update Soon</string>
    <string name="invalidPassword">Password must have at least 8 characters, 1 capital letter,  1 number and 1 special character.</string>
    <string name="passwordMustHaveAtLeast8Characters">Password must have at least 8 characters</string>
    <string name="confirmPasswordDoesNotMatchWithNewPassword">Confirm password does not match with new password</string>
    <string name="fromNORequire">From number require</string>
    <string name="toNORequire">To number require</string>
    <string name="zeroNONotValid">0 not valid</string>
    <string name="maxNoIS">Max number is </string>
    <string name="checkTONumber">Check To number</string>
    <string name="timeHint">00:00</string>
    <string name="howToPlay">How to play?</string>
    <string name="howToPlayQuestion"><u>How to play?</u></string>
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <string name="dialog_file_not_found">File not found</string>
    <string name="text_camera_permission_msg_profile">Without CAMERA permission the app is unable to set picture.
        Are you sure you want to deny this permission?
        \n\nif you deny before and alert are not showing for allow permission then follow below steps.
        \n\nTap Setting > Apps > WordPuzzle > Permissions, and turn on.</string>
    <string name="text_save_profile_picture_msg">You must allow access Photos, media and files (storage) permission to set picture.
        Are you sure you want to deny this permission?
        \n\nif you deny before and alert are not showing for allow permission then follow below steps.
        \n\nTap Setting > Apps > WordPuzzle > Permissions, and turn on.</string>
    <string name="setting">SETTING</string>
    <string name="text_i_am_sure">I\'M SURE</string>
    <string name="retry">RETRY</string>
    <string name="maxUploadSizeIs5Mb">Max. upload size is 5mb</string>
    <string name="deleteAccount">Delete account</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="about_text_1">Welcome to Word Puzzle, your ultimate destination for challenging and entertaining word games! Whether you\'re a seasoned wordsmith or just looking to pass the time, Word Puzzle offers an engaging and stimulating experience for players of all skill levels.</string>
    <string name="about_text_2">Our Mission</string>
    <string name="about_text_3">At Word Puzzle, our mission is to provide a fun and educational platform where users can expand their vocabulary, improve their spelling, and enjoy the satisfaction of solving puzzles. We believe that learning should be both enjoyable and rewarding, and our app is designed to deliver just that.</string>
    <string name="generate_password_info">We have sent a generated password to your registered email address. \n\n Please use these credentials to log in again.</string>
    <string name="puzzleCompleted">Puzzle Completed</string>
    <string name="playMore">Play More</string>
    <string name="leaderBoardCapital">Leader Board</string>
    <string name="dialog_quit_text">Are you sure, you want to quit the game?</string>
    <string name="quitGame">Quit Game</string>
</resources>