<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_190sdp"
    android:layout_gravity="center"
    android:background="@null">

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:elevation="@dimen/_1sdp"
        android:padding="@dimen/_2sdp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_round_close"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/cl2"
        app:layout_constraintStart_toEndOf="@+id/cl2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_160sdp"
        android:layout_gravity="center"
        android:background="@drawable/ic_dialog_backgraound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_logout"
            style="@style/Textview32WhiteAkayaKanadakaRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="7sp"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/Textview20WhiteActorRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/_6ssp"
            android:text="@string/do_you_want_to_generate_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_logout" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            style="@style/Textview20WhiteActorRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_minus5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:includeFontPadding="false"
            android:text="@string/generate_password"
            app:buttonIcon="@drawable/checkbox_checked"
            app:layout_constraintStart_toStartOf="@+id/tvQuestion"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintFreeLayout_logout"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/ic_dialog_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox">

            <TextView
                android:id="@+id/tvSubmit"
                style="@style/Textview20BlackAkayaKanadakaRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="7sp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>