<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="eventHandler"
            type="com.wordpuzzle.app.android.main.ui.login.LoginHandler" />

        <variable
            name="viewModel"
            type="com.wordpuzzle.app.android.main.ui.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_blue_orange_gradient_svg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivWordPuzzleSvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_word_puzzle_svg"
                app:layout_constraintBottom_toTopOf="@+id/tlEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                style="@style/TextInputLayoutWhiteTheme"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_50sdp"
                app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivWordPuzzleSvg"
                app:theme="@style/ThemeOverlay.CustomTextInputEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/TextInputLayoutEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ConstraintLayout_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlEmail">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    style="@style/TextInputLayoutWhiteTheme"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleDrawable="@drawable/hide_show_password"
                    app:passwordToggleEnabled="true"
                    app:theme="@style/ThemeOverlay.CustomTextInputEditText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/TextInputLayoutEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:lineSpacingExtra="0dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintFreeLayout_login"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/ic_button"
                android:onClick="@{() -> viewModel.tvLogin()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ConstraintLayout_password">

                <TextView
                    style="@style/Textview32BlackAkayaKanadakaRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvForgot"
                style="@style/Textview20WhiteActorRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_6ssp"
                android:onClick="@{()->eventHandler.tvForgetPasswordClick()}"
                android:text="@string/forget_password"
                app:layout_constraintBottom_toTopOf="@+id/tvRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintFreeLayout_login" />

            <TextView
                android:id="@+id/tvRegister"
                style="@style/Textview20WhiteActorRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_6ssp"
                android:onClick="@{()->eventHandler.tvRegistrationClick()}"
                android:text="@string/new_user_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvForgot" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>