<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="eventHandler"
            type="com.wordpuzzle.app.android.main.ui.sign_up.SignUpEventHandler" />

        <variable
            name="viewModel"
            type="com.wordpuzzle.app.android.main.ui.sign_up.SignUpViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_blue_orange_gradient_svg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivWordPuzzleSvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_46sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_word_puzzle_svg"
                app:layout_constraintBottom_toTopOf="@+id/tlName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlName"
                style="@style/TextInputLayoutWhiteTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_61sdp"
                android:layout_marginTop="@dimen/_19sdp"
                app:layout_constraintBottom_toTopOf="@+id/tlEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivWordPuzzleSvg"
                app:theme="@style/ThemeOverlay.CustomTextInputEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    style="@style/TextInputLayoutEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:includeFontPadding="false"
                    android:inputType="textCapWords"
                    android:lineSpacingExtra="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlEmail"
                style="@style/TextInputLayoutWhiteTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_61sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvAge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlName"
                app:theme="@style/ThemeOverlay.CustomTextInputEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/TextInputLayoutEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:lineSpacingExtra="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvAge"
                style="@style/Textview32BlackActorRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:includeFontPadding="false"
                android:lineSpacingExtra="6sp"
                android:text="@string/age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tlEmail" />

            <ImageView
                android:id="@+id/ivAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/ic_age_svg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <com.wordpuzzle.app.android.utils.StyledNumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_108sdp"
                android:descendantFocusability="blocksDescendants"
                android:theme="@style/SelectedTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/ivAge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivAge" />


            <TextView
                android:id="@+id/tvLogin"
                style="@style/Textview20WhiteActorRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_6ssp"
                android:onClick="@{() -> eventHandler.tvLoginClick()}"
                android:text="@string/have_password_login"
                app:layout_constraintBottom_toTopOf="@+id/constraintBottomLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numberPicker" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintBottomLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_64sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAge">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintFreeLayout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_41sdp"
                    android:layout_marginEnd="@dimen/_9sdp"
                    android:background="@drawable/ic_button"
                    android:onClick="@{() -> viewModel.ivFreeClick()}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/constraintPaidLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/Textview32BlackAkayaKanadakaRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="7sp"
                        android:text="@string/free"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintPaidLayout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_41sdp"
                    android:layout_marginStart="@dimen/_9sdp"
                    android:background="@drawable/ic_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/constraintFreeLayout"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/Textview32DisableBlackAkayaKanadakaRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:lineSpacingExtra="7sp"
                        android:text="@string/paid"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>